---
config:
    theme: redux-dark-color
---
erDiagram
    direction LR

    SESSIONS["sessions"] {
        uuid id PK
        uuid user_id FK
        uuid current_token_id UK
        timestamptz last_used_at
        timestamptz created_at
        timestamptz expires_at
    }

    CHAT_PARTICIPANTS["chat_participants"] {
        uuid chat_id PK,FK
        uuid user_id PK,FK
        uuid? last_read_message_id FK
        timestamptz joined_at
    }

    GROUP_PARTICIPANTS["group_participants"] {
        uuid chat_id PK,FK
        uuid user_id PK,FK
        user_role role
    }
    
    CHATS["chats"] {
        uuid id PK
        chat_type type
        uuid? last_message_id FK
        timestamptz last_activity_at
        timestamptz created_at
    }

    MESSAGES["messages"] {
        uuid id PK
        uuid client_message_id UK
        uuid chat_id FK
        uuid sender_id FK,UK
        text content
        timestamptz created_at
        timestamptz? updated_at
    }

    USERS["users"] {
        uuid id PK
        varchar_32 username
        varchar_64 first_name
        varchar_64? last_name
        varchar_70? bio
        text password_hash
        timestamptz created_at
        timestamptz? deleted_at
    }
    
    GROUPS["groups"] {
        uuid chat_id PK,FK
        varchar_128 title
    }
    
    DIRECTS["directs"] {
        uuid chat_id PK,FK
        uuid user1_id FK
        uuid user2_id FK
    }

    USERS ||--o{ SESSIONS : "owns"
    USERS ||--o{ DIRECTS : "user 1"
    USERS ||--o{ DIRECTS : "user 2"
    USERS ||--o{ CHAT_PARTICIPANTS : "joins"
    USERS ||--o{ MESSAGES : "sends"

    DIRECTS o|--|| CHATS : "direct subtype"
    CHATS ||--o| GROUPS : "group subtype"
    CHAT_PARTICIPANTS }o--|| CHATS : "belongs to"
    GROUPS ||--o{ GROUP_PARTICIPANTS : "has"
    GROUP_PARTICIPANTS o|--|| CHAT_PARTICIPANTS : "subtype"
    MESSAGES }o--|| CHATS : "belongs to"
    CHATS o{--o| MESSAGES : "last message"
    CHAT_PARTICIPANTS o{--o| MESSAGES : "read cursor"
